[project]
name = "agent-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Waheed Ahmad", email = "waheedahmad5519@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.14",
]

[project.scripts]
agent-03 = "agent_03:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
